# gamelibs-pcre2

./: Makefile  meson.build
.github/workflows/: build.yml  cifuzz.yml  clang-analyzer.yml  codeql.yml  dev.yml  pages.yml  scorecards.yml  sync.yml
msvc/: PCRE2.vcxproj  PCRE2.vcxproj.filters
src/: config.h  pcre2.h  pcre2_compile.c  pcre2_internal.h
